@@ -5,7 +5,6 @@ Required for alpha 2
 --------------------
 
 Fix syntax highlighting for comments
-Implement support for ~ at start of paths
 Implement SETTICK
 Implement and test missing MEMORY sub-commands
 
