@@ -1,10 +1,11 @@
 #include "../common/error.h"
+#include "../common/utility.h"
 #include "../common/version.h"
 
 void cmd_kill(void) {
-    char *p = getCstring(cmdline);  // get the file name and convert to a standard C string
-
-    errno = 0;
-    remove(p);
+    char *path = GetTempStrMemory();
+    munge_path(getCstring(cmdline), path, STRINGSIZE);
+    error_check();
+    remove(path);
     error_check();
 }
