@@ -1,13 +1,13 @@
 #include <unistd.h>
 
 #include "../common/error.h"
+#include "../common/utility.h"
 #include "../common/version.h"
 
 void cmd_rmdir(void) {
-    char *p;
-
-    p = getCstring(cmdline);  // get the directory name and convert to a standard C string
-    errno = 0;
-    rmdir(p);
+    char *path = GetTempStrMemory();
+    munge_path(getCstring(cmdline), path, STRINGSIZE);
+    error_check();
+    rmdir(path);
     error_check();
 }
